src/test/deca/context/invalid/invalid-keyword.deca
// Description:
//    Utilisation d'un mot-clé invalide.
//
// Resultats:
//    Erreur de lexique : mot-clé non reconnu.
//
{
    intr x;
    x = 42;
    println(x);
}